--- a/src/main/resources/templates/fragments/missions/cancelled-missions.html
+++ b/src/main/resources/templates/fragments/missions/cancelled-missions.html
@@ -9,17 +9,14 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between align-items-center">
                     <a class="btn btn-primary" th:href="@{/missions/create}">Ajouter une mission</a>
-                    <form class="d-flex" role="search" id="searchCancelledMission" th:action="@{/missions/search}">
-                        <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                        <button type="submit" form="searchCancelledMission" class="btn btn-outline-secondary btn-sm">
-                            <i class="bi bi-search"></i>
-                        </button>
+                    <form class="d-flex" role="search">
+                        <input type="text" placeholder="Rechercher" class="form-control-sm searchBox" data-table="#cancelledMissionTable">
                     </form>
                 </div>
             </div>
             <div class="card-body">
                 <p th:if="${cancelledMissions.isEmpty()}">Il n'y a pas de mission</p>
-                <table class="table-responsive table table-striped table-hover" th:unless="${cancelledMissions.isEmpty()}">
+                <table class="table-responsive table table-striped table-hover" th:unless="${cancelledMissions.isEmpty()}" id="cancelledMissionTable">
                     <thead>
                     <tr>
                         <th>Nom</th>
@@ -46,10 +43,6 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
-            <div class="card-footer">
-                Pagination
-
             </div>
         </div>
     </div>
