--- a/src/main/resources/templates/fragments/missions/new-missions.html
+++ b/src/main/resources/templates/fragments/missions/new-missions.html
@@ -2,59 +2,57 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
-    <div id="new" class="tab-pane show in active" th:fragment="new-missions">
-        <hr/>
-        <h3 class="text-center">Missions à planifier</h3>
-        <div class="card">
-            <div class="card-header">
-                <div class="d-flex justify-content-between align-items-center">
-                    <a class="btn btn-primary" th:href="@{/missions/create}">Ajouter une mission</a>
-                    <form class="d-flex" role="search" id="searchNewMission" th:action="@{/missions/search}">
-                        <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                        <button type="submit" form="searchNewMission" class="btn btn-outline-secondary btn-sm">
-                            <i class="bi bi-search"></i>
-                        </button>
-                    </form>
-                </div>
-            </div>
-            <div class="card-body">
-                <p th:if="${newMissions.isEmpty()}">Il n'y a pas de mission</p>
-                <table class="table-responsive table table-striped table-hover" th:unless="${newMissions.isEmpty()}">
-                    <thead>
-                    <tr>
-                        <th>Nom</th>
-                        <th>Type</th>
-                        <th>Statut</th>
-                        <th>Nombre de bénévoles requis</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <tr th:each="newMission:${newMissions}">
-                        <td th:text="${newMission.title}"></td>
-                        <td th:text="${newMission.missionType.name}"></td>
-                        <td th:text="${@translationUtils.translateMissionStatus(newMission.status)}"></td>
-                        <td th:text="${newMission.requiredVolunteerNumber}"></td>
-                        <td>
-                            <!-- Planifier -->
-                            <a class="btn btn-success btn-sm" th:href="@{/missions/plan/new/{id}(id=${newMission.uuid})}"><i class="bi bi-calendar-plus"></i></a>
-                            <!-- Editer -->
-                            <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/new/{id}(id=${newMission.uuid})}"><i class="bi bi-pencil-square"></i></a>
-                            <!-- Supprimer -->
-                            <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteMissionModal" th:attr="data-mission-id=${newMission.uuid}"><i class="bi bi-trash"></i></button>
-                            <!-- Voir -->
-                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${newMission.uuid})}"><i class="bi bi-eye"></i></a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="card-footer">
+<div id="new" class="tab-pane show in active" th:fragment="new-missions">
+    <hr/>
+    <h3 class="text-center">Missions à planifier</h3>
+    <div class="card">
+        <div class="card-header">
+            <div class="d-flex justify-content-between align-items-center">
+                <a class="btn btn-primary" th:href="@{/missions/create}">Ajouter une mission</a>
+                <form class="d-flex" role="search">
+                    <input type="text" placeholder="Rechercher" class="form-control-sm searchBox" data-table="#newMissionTable">
+               </form>
             </div>
         </div>
-    </div>
+        <div class="card-body">
+            <p th:if="${newMissions.isEmpty()}">Il n'y a pas de mission</p>
+            <table class="table-responsive table table-striped table-hover" th:unless="${newMissions.isEmpty()}" id="newMissionTable">
+                <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Type</th>
+                    <th>Statut</th>
+                    <th>Nombre de bénévoles requis</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
 
+                <tr th:each="newMission:${newMissions}">
+                    <td th:text="${newMission.title}"></td>
+                    <td th:text="${newMission.missionType.name}"></td>
+                    <td th:text="${@translationUtils.translateMissionStatus(newMission.status)}"></td>
+                    <td th:text="${newMission.requiredVolunteerNumber}"></td>
+                    <td>
+                        <!-- Planifier -->
+                        <a class="btn btn-success btn-sm" th:href="@{/missions/plan/new/{id}(id=${newMission.uuid})}"><i class="bi bi-calendar-plus"></i></a>
+                        <!-- Editer -->
+                        <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/new/{id}(id=${newMission.uuid})}"><i class="bi bi-pencil-square"></i></a>
+                        <!-- Supprimer -->
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#deleteMissionModal"
+                                th:attr="data-mission-id=${newMission.uuid}">
+                            <i class="bi bi-trash"></i>
+                        </button>
+                        <!-- Voir -->
+                        <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${newMission.uuid})}"><i class="bi bi-eye"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 
 </body>
