--- a/src/main/resources/templates/fragments/missions/planned-missions.html
+++ b/src/main/resources/templates/fragments/missions/planned-missions.html
@@ -9,17 +9,14 @@
         <div class="card-header">
             <div class="d-flex justify-content-between align-items-center">
                 <a class="btn btn-primary" th:href="@{/missions/create}">Ajouter une mission</a>
-                <form class="d-flex" role="search" id="searchPlannedMission" th:action="@{/missions/search}">
-                    <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                    <button type="submit" form="searchPlannedMission" class="btn btn-outline-secondary btn-sm">
-                        <i class="bi bi-search"></i>
-                    </button>
+                <form class="d-flex" role="search">
+                    <input type="text" placeholder="Rechercher" class="form-control-sm searchBox" data-table="#plannedMissionTable">
                 </form>
             </div>
         </div>
         <div class="card-body">
             <p th:if="${plannedMissions.isEmpty()}">Il n'y a pas de mission</p>
-            <table class="table-responsive table table-striped table-hover" th:unless="${plannedMissions.isEmpty()}">
+            <table class="table-responsive table table-striped table-hover" th:unless="${plannedMissions.isEmpty()}" id="plannedMissionTable">
                 <thead>
                 <tr>
                     <th>Nom</th>
@@ -54,22 +51,6 @@
                 </tr>
                 </tbody>
             </table>
-        </div>
-        <div class="card-footer">
-            Pagination
-            <!--<nav aria-label="Page navigation volunteer">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a class="page-link" th:href="@{/index(page=${previousPage})}">Previous</a>
-                    </li>
-                    <li class="page-item" th:class="${currentPage==status.index?'active':''}" th:each="page, status:${pages}">
-                        <a class="page-link"  th:text="${status.index}" th:href="@{/index(page=${status.index},keyword=${keyword})}"></a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" th:href="@{/index(page=${nextPage})}">Next</a>
-                    </li>
-                </ul>
-            </nav>-->
         </div>
     </div>
 </div>
