--- a/src/main/resources/templates/fragments/modals/activation-mission-type-modal.html
+++ b/src/main/resources/templates/fragments/modals/activation-mission-type-modal.html
@@ -23,7 +23,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="activationMissionTypeModalLabel">Désactivation du Type de Mission</h5>
+                    <h5 class="modal-title" id="activationMissionTypeModalLabel">Activation du Type de Mission</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
