--- a/src/main/resources/templates/mission-types/mission-types.html
+++ b/src/main/resources/templates/mission-types/mission-types.html
@@ -14,28 +14,24 @@
                         <hr />
                         <a class="btn btn-primary" th:href="@{/mission-types/create}">Ajouter un type</a>
                         <hr />
-                        <div class="card">
-                            <div class="card-header">
-                                <form class="d-flex" role="search" id="search" th:action="@{/mission-types/search}">
-                                    <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                                    <button type="submit" form="search" class="btn btn-secondary btn-sm mx-1">
-                                        <i class="bi bi-search"></i>
-                                    </button>
-                                    <button type="submit" th:href="@{/mission-types}" class="btn btn-outline-secondary btn-sm"><i class="bi bi-arrow-counterclockwise"></i></button>
-                                </form>
-                            </div>
-                            <div class="card-body">
-
-                                <table class="table table-responsive table-striped table-hover">
-                                    <thead>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <form class="d-flex" role="search">
+                                <input type="text" placeholder="Rechercher" class="form-control-sm searchBox" data-table="#missionTypeTable">
+                            </form>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-responsive table-striped table-hover" id="missionTypeTable">
+                                <thead>
                                     <tr>
                                         <th>Nom</th>
                                         <th>Description</th>
                                         <th>Statut</th>
                                         <th>Actions</th>
                                     </tr>
-                                    </thead>
-                                    <tbody>
+                                </thead>
+                                <tbody>
                                     <tr th:each="missionType:${missionTypes}">
                                         <td th:text="${missionType.name}"></td>
                                         <td th:text="${missionType.description}"></td>
@@ -53,18 +49,11 @@
                                                     data-bs-target="#deleteMissionTypeModal" th:attr="data-missionType-id=${missionType.uuid}"><i class="bi bi-trash"></i></button>
                                         </td>
                                     </tr>
-                                    </tbody>
-                                </table>
-
-                            </div>
-                            <div class="card-footer">
-                                Pagination
-
-                            </div>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </main>
-                <div th:replace="~{fragments/footer :: footer}"></div>
             </div>
         </div>
     </div>
@@ -72,8 +61,6 @@
     <div th:replace="~{fragments/modals/delete-mission-type-modal :: delete-mission-type-modal}"></div>
     <div th:replace="~{fragments/modals/deactivation-mission-type-modal :: deactivation-mission-type-modal}"></div>
     <div th:replace="~{fragments/modals/activation-mission-type-modal :: activation-mission-type-modal}"></div>
-
-
 
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
