--- a/src/main/resources/templates/missions/confirmed-mission/edit-confirmed-mission.html
+++ b/src/main/resources/templates/missions/confirmed-mission/edit-confirmed-mission.html
@@ -119,12 +119,12 @@
         let checkboxes = document.querySelectorAll('#editConfirmMissionForm input[type="checkbox"][name="volunteerUuids"]');
         if (checkboxes.length === 0) {
             alert("Il n'y a aucun volontaire à sélectionner.");
-            e.preventDefault(); // Empêcher la soumission du formulaire
+            e.preventDefault();
         } else {
             let checkedOne = Array.prototype.slice.call(checkboxes).some(x => x.checked);
             if (!checkedOne) {
                 alert("Veuillez sélectionner au moins un volontaire.");
-                e.preventDefault(); // Empêcher la soumission du formulaire
+                e.preventDefault();
             }
         }
     });
