--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -2,9 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
-
-
-
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
             <div th:replace="~{fragments/sidebar :: sidebar}"></div>
@@ -37,10 +34,36 @@
                         </div>
                     </div>
                 </main>
-                <div th:replace="~{fragments/footer :: footer}"></div>
             </div>
         </div>
     </div>
+
+    <script th:inline="javascript">
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('.searchBox').forEach(function(input) {
+                input.addEventListener('keyup', function() {
+                    const searchTerm = this.value.toLowerCase();
+                    const tableSelector = this.getAttribute('data-table');
+                    const tableRows = document.querySelectorAll(`${tableSelector} tbody tr`);
+
+                    tableRows.forEach(function(row) {
+                        const cells = row.getElementsByTagName('td');
+                        let found = false;
+
+                        for (let cell of cells) {
+                            if (cell.textContent.toLowerCase().includes(searchTerm)) {
+                                found = true;
+                                break;
+                            }
+                        }
+
+                        row.style.display = found ? '' : 'none';
+                    });
+                });
+            });
+        });
+    </script>
+
     <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
     <div th:replace="~{fragments/modals/delete-mission-modal :: delete-mission-modal}"></div>
     <div th:replace="~{fragments/modals/cancel-mission-modal :: cancel-mission-modal}"></div>
