--- a/src/main/resources/templates/volunteers/volunteers.html
+++ b/src/main/resources/templates/volunteers/volunteers.html
@@ -2,9 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
-
-
-
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
             <div th:replace="~{fragments/sidebar :: sidebar}"></div>
@@ -15,62 +12,55 @@
                         <hr />
                         <a class="btn btn-primary" th:href="@{/volunteers/create}">Ajouter un bénévole</a>
                         <hr />
-                        <div class="card">
-                            <div class="card-header">
-                                <form class="d-flex" role="search" id="search" th:action="@{/volunteers/search}">
-                                    <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                                    <button type="submit" form="search" class="btn btn-outline-secondary btn-sm">
-                                        <i class="bi bi-search"></i>
-                                    </button>
-                                </form>
-                            </div>
-                            <div class="card-body">
-                                <table class="table table-responsive table-striped table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Nom</th>
-                                            <th>Prénom</th>
-                                            <th>Email</th>
-                                            <th>Téléphone</th>
-                                            <th>Statut</th>
-                                            <th>Actions</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="v:${volunteers}">
-                                            <td th:text="${v.lastName}"></td>
-                                            <td th:text="${v.firstName}"></td>
-                                            <td th:text="${v.email}"></td>
-                                            <td th:text="${v.phoneNumber}"></td>
-                                            <td th:text="${v.status}"></td>
-                                            <td>
-                                                <!-- Editer -->
-                                                <a class="btn btn-primary btn-sm" th:href="@{/volunteers/edit/{id}(id=${v.uuid})}">
-                                                    <i class="bi bi-pencil-square"></i>
-                                                </a>
-                                                <!-- Supprimer -->
-                                                <button type="button" class="btn btn-sm btn-danger"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#deleteVolunteerModal"
-                                                        th:attr="data-volunteer-id=${v.uuid}">
-                                                    <i class="bi bi-trash"></i>
-                                                </button>
-                                                <!-- Voir -->
-                                                <a class="btn btn-info btn-sm" th:href="@{/volunteers/view/{id}(id=${v.uuid})}">
-                                                    <i class="bi bi-eye"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="card-footer">
-                                Pagination
-                            </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <form class="d-flex" role="search">
+                                <input type="text" placeholder="Rechercher" class="form-control-sm searchBox" data-table="#volunteerTable">
+                            </form>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-responsive table-striped table-hover" id="volunteerTable">
+                                <thead>
+                                    <tr>
+                                        <th>Nom</th>
+                                        <th>Prénom</th>
+                                        <th>Email</th>
+                                        <th>Téléphone</th>
+                                        <th>Statut</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="v:${volunteers}">
+                                        <td th:text="${v.lastName}"></td>
+                                        <td th:text="${v.firstName}"></td>
+                                        <td th:text="${v.email}"></td>
+                                        <td th:text="${v.phoneNumber}"></td>
+                                        <td th:text="${v.status}"></td>
+                                        <td>
+                                            <!-- Editer -->
+                                            <a class="btn btn-primary btn-sm" th:href="@{/volunteers/edit/{id}(id=${v.uuid})}">
+                                                <i class="bi bi-pencil-square"></i>
+                                            </a>
+                                            <!-- Supprimer -->
+                                            <button type="button" class="btn btn-sm btn-danger"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#deleteVolunteerModal"
+                                                    th:attr="data-volunteer-id=${v.uuid}">
+                                                <i class="bi bi-trash"></i>
+                                            </button>
+                                            <!-- Voir -->
+                                            <a class="btn btn-info btn-sm" th:href="@{/volunteers/view/{id}(id=${v.uuid})}">
+                                                <i class="bi bi-eye"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </main>
-                <div th:replace="~{fragments/footer :: footer}"></div>
             </div>
         </div>
     </div>
