--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -34,7 +34,11 @@
                     <i class="fs-5 bi-bullseye"></i><span class="ms-1 d-none d-sm-inline">Missions</span></a>
             </li>
         </ul>
-        <div class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
+        <div th:if="${not #authorization.expression('isAuthenticated()')}" class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
+            <a href="/login" class="text-white text-decoration-none">Connexion</a>
+        </div>
+
+        <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="https://github.com/mdo.png" alt="profile-image" width="28" height="28" class="rounded-circle">
                 <span class="d-none d-sm-inline mx-1">Joe</span>
@@ -45,9 +49,10 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                <li><a class="dropdown-item" href="/logout">Déconnexion</a></li>
             </ul>
         </div>
+
     </div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
