--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -35,7 +35,7 @@
             </li>
         </ul>
         <div th:if="${not #authorization.expression('isAuthenticated()')}" class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
-            <a href="/login" class="text-white text-decoration-none">Connexion</a>
+            <a th:href="@{/login}" class="text-white text-decoration-none">Connexion</a>
         </div>
 
         <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
@@ -49,7 +49,13 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="/logout">Déconnexion</a></li>
+                <li>
+                    <form th:action="@{/logout}" method="post" class="m-0">
+                        <button type="submit" class="dropdown-item" style="border: none; background: none; width: 100%;">
+                            Déconnexion
+                        </button>
+                    </form>
+                </li>
             </ul>
         </div>
 
