--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -47,6 +47,7 @@
             });
         });
     </script>
+    <div th:replace="~{fragments/modals/message-modal:: message-modal}"></div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
