--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+<div th:replace="~{fragments/head :: head}"></div>
 <body>
 
 <div th:fragment="sidebar" class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
@@ -40,11 +36,10 @@
 
         <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="profile-image" width="28" height="28" class="rounded-circle">
-                <span class="d-none d-sm-inline mx-1">Joe</span>
+                <span class="d-none d-sm-inline mx-1" th:text="${#authentication?.name}"></span>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">Administration</a></li>
+                <li><a class="dropdown-item" th:href="@{/administration}">Administration</a></li>
                 <li><a class="dropdown-item" href="#">Profil</a></li>
                 <li>
                     <hr class="dropdown-divider">
@@ -58,7 +53,6 @@
                 </li>
             </ul>
         </div>
-
     </div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
