--- a/src/main/resources/templates/administration/create-volunteer-with-role.html
+++ b/src/main/resources/templates/administration/create-volunteer-with-role.html
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="col-form-label">Email :</label>
-                                    <input th:field="*{email}" type="email" id="email" class="form-control" autocomplete="off">
+                                    <input th:field="*{email}" type="email" id="email" class="form-control" autocomplete="off" required="required">
                                 </div>
                                 <div class="form-group">
                                     <label for="phoneNumber" class="col-form-label">Téléphone :</label>
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="col-form-label">Mot de Passe :</label>
-                                    <input th:field="*{password}" type="password" id="password" class="form-control" autocomplete="off">
+                                    <input th:field="*{password}" type="password" id="password" class="form-control" autocomplete="off" required="required">
                                 </div>
                             </div>
                             <div class="col-md-7 col-sm-12 mb-4">
