--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -40,7 +40,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                 <li><a class="dropdown-item" th:href="@{/administration}">Administration</a></li>
-                <li><a class="dropdown-item" href="#">Profil</a></li>
+                <li><a class="dropdown-item" th:href="@{/administration/profil}">Profil</a></li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
