--- a/src/main/resources/templates/administration/create-volunteer-with-role.html
+++ b/src/main/resources/templates/administration/create-volunteer-with-role.html
@@ -34,6 +34,9 @@
                                 <div class="form-group">
                                     <h5>Rôles</h5>
                                     <hr>
+                                    <div id="roleError" class="alert alert-danger my-3" style="display: none">
+                                        Veuillez sélectionner au moins un rôle.
+                                    </div>
                                 </div>
                                 <div class="d-flex flex-wrap" role="group">
                                     <div class="my-2 me-2" th:each="role : ${allRoles}">
@@ -63,6 +66,15 @@
     </div>
     <script th:inline="javascript">
         document.addEventListener('DOMContentLoaded', function () {
+            const form = document.getElementById('editVolunteerWithRoleForm');
+            form.addEventListener('submit', function(event) {
+                const checkboxes = document.querySelectorAll('input[name="roleNames"]:checked');
+                if (checkboxes.length === 0) {
+                    event.preventDefault();
+                    document.getElementById('roleError').style.display = 'block';
+                }
+            });
+
             document.querySelectorAll('.role-admin').forEach(function (adminCheckbox) {
                 adminCheckbox.addEventListener('change', function () {
                     const isChecked = adminCheckbox.checked;
