--- a/src/main/resources/templates/administration/edit-volunteer-with-role.html
+++ b/src/main/resources/templates/administration/edit-volunteer-with-role.html
@@ -11,6 +11,7 @@
                 <div class="card-body">
 
                     <form th:action="@{/administration/volunteer/edit}" method="post" id="editVolunteerWithRoleForm" th:object="${volunteer}">
+                        <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
                         <div class="row">
                             <div class="col-md-5 col-sm-12 mb-4">
                                 <div class="form-group">
@@ -34,6 +35,9 @@
                                 <div class="form-group">
                                     <h5>Rôles</h5>
                                     <hr>
+                                    <div id="roleError" class="alert alert-danger my-3" style="display: none">
+                                        Veuillez sélectionner au moins un rôle.
+                                    </div>
                                 </div>
                                 <div class="d-flex flex-wrap" role="group">
                                     <div class="my-2 me-2" th:each="role : ${allRoles}">
@@ -44,10 +48,13 @@
                                                class="btn-check" th:classappend="${role.name == 'ROLE_ADMIN' ? 'role-admin' : (role.name == 'ROLE_MISSION' ? 'role-mission' : 'role-volunteer')}"
                                                autocomplete="off"
                                                th:checked="${volunteer.roles != null and #lists.contains(volunteer.roles, role.name)}"
-                                               th:disabled="${role.name == 'ROLE_ADMIN' and volunteer.roles != null and (#lists.contains(volunteer.roles, 'ROLE_VOLUNTEER') or #lists.contains(volunteer.roles, 'ROLE_MISSION'))}">
+                                               th:disabled="${role.name == 'ROLE_ADMIN' and volunteer.roles != null
+                                               and (#lists.contains(volunteer.roles, 'ROLE_VOLUNTEER') or #lists.contains(volunteer.roles, 'ROLE_MISSION'))}">
                                         <label class="btn btn-outline-secondary"
                                                th:for="${'btn-check-outlined' + role.name}"
-                                               th:text="${@translationUtils.translateRole(role.name)}"></label><br>
+                                               th:text="${@translationUtils.translateRole(role.name)}">
+                                        </label>
+                                        <br>
                                     </div>
                                 </div>
                             </div>
@@ -71,6 +78,15 @@
     </div>
     <script th:inline="javascript">
         document.addEventListener('DOMContentLoaded', function () {
+            const form = document.getElementById('editVolunteerWithRoleForm');
+            form.addEventListener('submit', function(event) {
+                const checkboxes = document.querySelectorAll('input[name="roleNames"]:checked');
+                if (checkboxes.length === 0) {
+                    event.preventDefault();
+                    document.getElementById('roleError').style.display = 'block';
+                }
+            });
+
             document.querySelectorAll('.role-admin').forEach(function (adminCheckbox) {
                 adminCheckbox.addEventListener('change', function () {
                     const isChecked = adminCheckbox.checked;
@@ -82,6 +98,7 @@
             });
         });
     </script>
+
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
