refactor front and finalize change password feature

--- a/src/main/resources/templates/administration/change-password.html
+++ b/src/main/resources/templates/administration/change-password.html
@@ -10,9 +10,12 @@
                 <h1>Changer le Mot de Passe</h1>
             </div>
             <div class="card-body">
-                <form th:action="@{/administration/profil/changePassword}" method="post" id="changePasswordForm">
-                    <input type="hidden" name="source" th:value="${sourcePage}">
+                <form th:action="@{/administration/profil/change-password}" method="post" id="changePasswordForm">
+                    <input type="hidden" name="mustChangePassword" th:value="${volunteer.mustChangePassword}">
                     <div class="modal-body">
+                        <div id="passwordError" class="alert alert-danger my-3" style="display: none">
+                            Les mots de passe ne correspondent pas.
+                        </div>
                         <div class="mb-3">
                             <label for="oldPassword" class="form-label">Ancien Mot de Passe</label>
                             <div class="input-group">
@@ -24,11 +27,21 @@
                         </div>
                         <div class="mb-3">
                             <label for="newPassword" class="form-label">Nouveau Mot de Passe</label>
-                            <input type="password" class="form-control" id="newPassword" name="newPassword" required="required" minlength="8">
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="newPassword" name="newPassword" required="required" minlength="8">
+                                <button type="button" onclick="togglePasswordVisibility('newPassword')" class="btn btn-outline-secondary">
+                                    <i class="bi bi-eye"></i>
+                                </button>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label for="confirmNewPassword" class="form-label">Confirmer le Nouveau Mot de Passe</label>
-                            <input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword" required="required">
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword" required="required">
+                                <button type="button" onclick="togglePasswordVisibility('confirmNewPassword')" class="btn btn-outline-secondary">
+                                    <i class="bi bi-eye"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -40,14 +53,29 @@
     </div>
 </div>
 <script th:inline="javascript">
-    function togglePasswordVisibility(oldPassword) {
-        let passwordField = document.getElementById(oldPassword);
+    function togglePasswordVisibility(passwordFieldId) {
+        let passwordField = document.getElementById(passwordFieldId);
         if (passwordField.type === "password") {
             passwordField.type = "text";
         } else {
             passwordField.type = "password";
         }
     }
+
+    document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById("changePasswordForm").addEventListener("submit", function(event) {
+            let newPassword = document.getElementById("newPassword").value;
+            let confirmPassword = document.getElementById("confirmNewPassword").value;
+            let passwordErrorDiv = document.getElementById("passwordError");
+
+            if (newPassword !== confirmPassword) {
+                passwordErrorDiv.style.display = "block";
+                event.preventDefault();
+            } else {
+                passwordErrorDiv.style.display = "none";
+            }
+        });
+    });
 </script>
 <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
 
