--- a/src/main/resources/templates/administration/profil.html
+++ b/src/main/resources/templates/administration/profil.html
@@ -13,10 +13,7 @@
                     <div class="card">
                         <div class="card-header">
                             <a class="btn btn-primary" th:href="@{/volunteers/edit/{id}(id=${volunteer.uuid},source='profil')}">Éditer le Profil</a>
-                            <button type="button" class="btn btn-warning" data-bs-toggle="modal"
-                                    data-bs-target="#changePasswordModal" th:attr="data-volunteer-id=${volunteer.uuid}">
-                                Modifier le Mot de Passe
-                            </button>
+                            <a class="btn btn-warning" th:href="@{/administration/profil/change-password}">Modifier le Mot de Passe</a>
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -63,8 +60,8 @@
         </div>
     </div>
 </div>
+
 <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
-<div th:replace="~{fragments/modals/change-password-modal :: change-password-modal}"></div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
