--- a/src/main/resources/templates/profil/change-password.html
+++ b/src/main/resources/templates/profil/change-password.html
@@ -10,7 +10,7 @@
                 <h1>Changer le Mot de Passe</h1>
             </div>
             <div class="card-body">
-                <form th:action="@{/administration/profil/change-password}" method="post" id="changePasswordForm">
+                <form th:action="@{/profil/change-password}" method="post" id="changePasswordForm">
                     <input type="hidden" name="mustChangePassword" th:value="${volunteer.mustChangePassword}">
                     <div class="modal-body">
                         <div id="passwordError" class="alert alert-danger my-3" style="display: none">
@@ -27,8 +27,10 @@
                         </div>
                         <div class="mb-3">
                             <label for="newPassword" class="form-label">Nouveau Mot de Passe</label>
-                            <div class="input-group">
-                                <input type="password" class="form-control" id="newPassword" name="newPassword" required="required" minlength="8">
+                            <div class="input-group has-validation">
+                                <input type="password" class="form-control" id="newPassword" name="newPassword" required="required"
+                                       minlength="8" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                                       title="Le mot de passe doit contenir au moins 8 caractères, dont une majuscule, un chiffre et un caractère spécial.">
                                 <button type="button" onclick="togglePasswordVisibility('newPassword')" class="btn btn-outline-secondary">
                                     <i class="bi bi-eye"></i>
                                 </button>
