--- a/src/main/resources/templates/profil/profil.html
+++ b/src/main/resources/templates/profil/profil.html
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-secondary" th:href="@{/volunteers}">Retour</a>
+                            <a class="btn btn-secondary" th:href="@{/templates/volunteers}">Retour</a>
                         </div>
                     </div>
                 </div>
